--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <div class="card ">
                 <h2>My Events</h2>
-                <div class="action-buttons">
+                <div class="buttons">
                     <button id="clearEventsBtn" class="btn">Clear All Events</button>
                     <button id="addSampleBtn" class="btn">Add Sample Events</button>
                 </div>
@@ -64,7 +64,7 @@
             </div>
         </div>
 
-        <div class="card dom-demo-card">
+        <div class="card">
             <h2>DOM Manipulation Demo</h2>
             
             <div class="demo-box">
